--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'F396'
 - !lcsh 'Tennessee, East -- Social life and customs'
 - !lcsh 'York, Alvin Cullum, 1887-1964'
+- GITenberg
 title: Sergeant York And His People
 url: http://www.gutenberg.org/ebooks/19117
